@@ -1,3 +1,7 @@
+2004-03-06  Koichi Sasada <sasada@namikilab.tuat.ac.jp>
+
+	* src/kahua-spvr.in (dispatch-to-worker): modified error handling
+
 2004-03-05  Shiro Kawai  <shiro@acm.org>
 
 	* examples/lambdacalcul/lambdacalcul.kahua : added.
